owncloud-news (1.403)
* Respect encoding in feed enhancers
* Hotfix for update on posgresql databases

owncloud-news (1.402)
* Add possibility of adding more than one xpath for article enhancer
* Fix bug that wouldn't delete old read articles

owncloud-news (1.401)
* Add possibility to hook up article enhancers which fetch article content directly from the web page
* Add article enhancer for explosm.net to directly fetch comics and shorts
* Possible backwards incompatible change by using the link provided by simplepie instead of the user for the url hash. This prevents duplication of the feed when adding a slightly different feed url which points to the same feed and allows a speedup from O(n) to O(1) for article enhanchers
* Add an option route for the API which handles the CORS headers to allow webapplications to access the API
* Also allow youtube and vimeo embeds that start with // and https:// instead of only allowing http
* ownCloud 6 compability fixes
* Throw proper error codes when creating invalid folders through the API
* More whitespace to fit ownCloud 6 design better
* Increased unread count from 99+ to maximum of 999+ because there is now more space
* Use a configuration file in data/news/config/config.ini to not overwrite uservalues on update
* Fix bug in python updater api that would trigger a method not allowed error
* Add first run page that shows all options expanded if there are no feeds and the app is launched for the first time

owncloud-news (1.206)
* Also handle URLErrors in updater script that are thrown when the domain of a feed is not found

owncloud-news (1.205)
* Also allow magnet urls in articles
* When jumping to the next item after the last one, also mark the last item as read

owncloud-news (1.204)
* Fix problem that caused python updater script to exit because of maximum recursion
* Add an option to testrun an update with the updater script

owncloud-news (1.203)