@@ -1,3 +1,6 @@
+owncloud-news (1.404)
+* Fix bug on postgres databases that would not delete old articles
+
 owncloud-news (1.403)
 * Respect encoding in feed enhancers
 * Hotfix for update on posgresql databases
